--- a/mad/pubspec.yaml
+++ b/mad/pubspec.yaml
@@ -30,10 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.6  # or the latest version
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  http: ^0.13.6
+
+  cupertino_icons: ^1.0.8  
+  
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.4.0 
+  firebase_storage: ^11.2.0
+  cloud_firestore: ^4.7.0 
+  image_picker: ^0.8.7+4
+  permission_handler: ^10.2.0
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
